--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1251,6 +1251,58 @@ div.mincalendar-container {
         }
     }
 
+    /* Most used tablets resolutions in portrait mode */
+    @media screen and (max-width: 1024px) and (orientation: portrait) {
+        /* LANDING */
+        .landing-container {
+            flex-direction: column;
+            margin-top: 35px;
+            max-height: calc(100vh - var(--headerHeight) - 35px);
+        }
+
+        .landing-container>div {
+            flex: none;
+            height: auto;
+            width: 100%;
+        }
+
+        .landing-container .landing-entry-text-container {
+            margin-bottom: -50px;
+            z-index: 1;
+            display: block;
+        }
+
+        .landing-entry-text-container>div {
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .isometric-landing-container {
+            justify-content: center;
+        }
+
+        .isometric-landing-image {
+            width: 100%;
+            height: auto;
+        }
+
+        /* MAIN CONTAINER */
+        .main-container {
+            max-height: calc(100vh - var(--headerHeight));
+            display: block;
+        }
+
+        .calendar-container {
+            width: 100%;
+            height: 50%;
+        }
+
+        .task-container {
+            width: 100%;
+            height: 50%;
+        }
+    }
+
     @media screen and (max-width: 1024px) and (orientation: landscape) {
         /* LANDING TEXT */
         .landing-entry-text-container>div {
@@ -1493,9 +1545,4 @@ div.mincalendar-container {
             font-size: 1.10rem;
         }
     }
-}
-
-/* Most used tablets resolutions in portrait mode */
-@media screen and (max-width: 1024px) and (orientation: portrait) {
-
 }
